--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -3,9 +3,14 @@
  * Copyright 2013-2017 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-freelancer/blob/master/LICENSE)
  */
+html {
+  height: 100%; }
+
 body {
   font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  overflow-x: hidden; }
+  height: 100%;
+  margin: 0;
+  padding: 0; }
 
 p {
   font-size: 20px; }
@@ -18,7 +23,7 @@ a.active,
 a:active,
 a:focus,
 a:hover {
-  color: #18BC9C;
+  color: #c84728;
   outline: none; }
 
 h1,
@@ -27,7 +32,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 700;
   text-transform: uppercase; }
 
@@ -55,27 +60,27 @@ hr.star-light {
 
 hr.star-light:after {
   color: white;
-  background-color: #18BC9C; }
+  background-color: #c84728; }
 
 hr.star-primary {
-  border-color: #2C3E50; }
+  border-color: white; }
 
 hr.star-primary:after {
-  color: #2C3E50;
+  color: white;
   background-color: white; }
 
 .img-centered {
   margin: 0 auto; }
 
 section {
-  padding: 100px 0; }
+  padding: 60px 0; }
   section h2 {
-    font-size: 3em;
+    font-size: 2em;
     margin: 0; }
 
 section.success {
   color: white;
-  background: #18BC9C; }
+  background: #c84728; }
 
 @media (max-width: 767px) {
   section {
@@ -101,42 +106,45 @@ section.success {
       outline: none; }
 
 #mainNav {
-  font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 700;
   text-transform: uppercase;
-  border: none;
-  background: #2C3E50; }
+  border-bottom: 2px solid #eab575;
+  background: white; }
   #mainNav a:focus {
     outline: none; }
   #mainNav .navbar-brand {
     font-size: 1.1rem;
-    color: white; }
+    color: black; }
     #mainNav .navbar-brand.active, #mainNav .navbar-brand:active, #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
-      color: white; }
+      color: black; }
   #mainNav .navbar-nav {
+    font-size: 10pt;
     letter-spacing: 1px; }
     #mainNav .navbar-nav li.nav-item a.nav-link {
-      color: white; }
+      color: black; }
       #mainNav .navbar-nav li.nav-item a.nav-link:hover {
-        color: #18BC9C;
+        color: #c84728;
         outline: none; }
       #mainNav .navbar-nav li.nav-item a.nav-link:active, #mainNav .navbar-nav li.nav-item a.nav-link:focus {
-        color: white; }
+        color: black; }
   #mainNav .navbar-toggler {
     font-size: 14px;
     padding: 11px;
     text-transform: uppercase;
-    color: white;
-    border-color: white; }
+    color: black;
+    border-color: black; }
     #mainNav .navbar-toggler:focus, #mainNav .navbar-toggler:hover {
-      color: white;
-      border-color: #18BC9C;
-      background-color: #18BC9C; }
+      color: black;
+      border-color: #c84728;
+      background-color: #c84728; }
 
 @media (min-width: 992px) {
   #mainNav {
     padding-top: 25px;
     padding-bottom: 25px;
+    padding-left: 200px;
+    padding-right: 200px;
     -webkit-transition: padding-top 0.3s, padding-bottom 0.3s;
     -moz-transition: padding-top 0.3s, padding-bottom 0.3s;
     transition: padding-top 0.3s, padding-bottom 0.3s; }
@@ -147,44 +155,57 @@ section.success {
       transition: all 0.3s; }
     #mainNav .navbar-nav > li.nav-item > a.nav-link.active {
       color: white;
-      border-radius: 3px;
-      background: #18BC9C; }
+      border-radius: 0px;
+      background: #c84728; }
       #mainNav .navbar-nav > li.nav-item > a.nav-link.active:active, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:focus, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:hover {
         color: white;
-        background: #18BC9C; }
+        background: #c84728; }
   #mainNav.navbar-shrink {
-    padding-top: 10px;
-    padding-bottom: 10px; }
+    padding-top: 5px;
+    padding-bottom: 5px; }
     #mainNav.navbar-shrink .navbar-brand {
       font-size: 1.5em; } }
 
 header.masthead {
-  padding-top: 100px;
-  padding-bottom: 50px;
+  height: 80%;
   text-align: center;
   color: white;
-  background: #18BC9C; }
+  background: #c84728;
+  background-image: url(../img/craft.jpg);
+  background-position: center;
+  background-size: cover; }
+  header.masthead .intro-navigation {
+    font-size: 1.2em;
+    margin-top: 40px; }
+    header.masthead .intro-navigation a {
+      text-decoration: none;
+      border: 1px solid white;
+      padding: 10px;
+      color: white; }
+      header.masthead .intro-navigation a:hover {
+        color: white;
+        background: rgba(0, 0, 0, 0.5); }
+      header.masthead .intro-navigation a:active {
+        color: white; }
   header.masthead img {
     display: block;
     margin: 0 auto 20px; }
   header.masthead .intro-text .name {
-    font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-size: 2em;
     font-weight: 700;
-    display: block;
-    text-transform: uppercase; }
+    display: block; }
   header.masthead .intro-text .skills {
     font-size: 1.25em;
     font-weight: 300; }
 
 @media (min-width: 768px) {
   header.masthead {
-    padding-top: 200px;
-    padding-bottom: 100px; }
+    padding-top: 18%; }
     header.masthead .intro-text .name {
-      font-size: 4.75em; }
+      font-size: 4em; }
     header.masthead .intro-text .skills {
-      font-size: 1.75em; } }
+      font-size: 1.5em; } }
 
 #portfolio .portfolio-item {
   right: 0;
@@ -203,7 +224,7 @@ header.masthead {
       -moz-transition: all ease 0.5s;
       transition: all ease 0.5s;
       opacity: 0;
-      background: rgba(24, 188, 156, 0.9); }
+      background: rgba(200, 71, 40, 0.9); }
       #portfolio .portfolio-item .portfolio-link .caption:hover {
         opacity: 1; }
       #portfolio .portfolio-item .portfolio-link .caption .caption-content {
@@ -271,7 +292,7 @@ header.masthead {
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
-    background-color: #2C3E50; }
+    background-color: white; }
     .portfolio-modal .close-modal .lr .rl {
       /* Safari and Chrome */
       z-index: 1052;
@@ -281,7 +302,7 @@ header.masthead {
       -webkit-transform: rotate(90deg);
       -ms-transform: rotate(90deg);
       transform: rotate(90deg);
-      background-color: #2C3E50; }
+      background-color: white; }
 
 .portfolio-modal .modal-backdrop {
   display: none;
@@ -328,7 +349,7 @@ header.masthead {
   opacity: 1; }
 
 .floating-label-form-group-with-focus label {
-  color: #18BC9C; }
+  color: #c84728; }
 
 form .row:first-child .floating-label-form-group {
   border-top: 1px solid #eeeeee; }
@@ -339,12 +360,12 @@ footer {
     margin-bottom: 30px; }
   footer .footer-above {
     padding-top: 50px;
-    background-color: #2C3E50; }
+    background-color: white; }
   footer .footer-col {
     margin-bottom: 50px; }
   footer .footer-below {
     padding: 25px 0;
-    background-color: #2c3e50; }
+    background-color: white; }
 
 .btn-outline {
   font-size: 20px;
@@ -354,35 +375,35 @@ footer {
   border: solid 2px white;
   background: transparent; }
   .btn-outline.active, .btn-outline:active, .btn-outline:focus, .btn-outline:hover {
-    color: #18BC9C;
+    color: #c84728;
     border: solid 2px white;
     background: white; }
 
 .btn-primary {
   font-weight: 700;
   color: white;
-  border-color: #2C3E50;
-  background-color: #2C3E50; }
+  border-color: white;
+  background-color: white; }
   .btn-primary.focus, .btn-primary:focus {
     color: white;
-    border-color: black;
-    background-color: #1a252f; }
+    border-color: #bfbfbf;
+    background-color: #e6e6e6; }
   .btn-primary:hover {
     color: white;
-    border-color: #161f29;
-    background-color: #1a252f; }
+    border-color: #e0e0e0;
+    background-color: #e6e6e6; }
   .btn-primary.active, .btn-primary:active,
   .open > .btn-primary.dropdown-toggle {
     color: white;
-    border-color: #161f29;
-    background-color: #1a252f; }
+    border-color: #e0e0e0;
+    background-color: #e6e6e6; }
     .btn-primary.active.focus, .btn-primary.active:focus, .btn-primary.active:hover, .btn-primary:active.focus, .btn-primary:active:focus, .btn-primary:active:hover,
     .open > .btn-primary.dropdown-toggle.focus,
     .open > .btn-primary.dropdown-toggle:focus,
     .open > .btn-primary.dropdown-toggle:hover {
       color: white;
-      border-color: black;
-      background-color: #0d1318; }
+      border-color: #bfbfbf;
+      background-color: #d4d4d4; }
   .btn-primary.active, .btn-primary:active,
   .open > .btn-primary.dropdown-toggle {
     background-image: none; }
@@ -390,37 +411,37 @@ footer {
   fieldset[disabled] .btn-primary.focus,
   fieldset[disabled] .btn-primary:focus,
   fieldset[disabled] .btn-primary:hover {
-    border-color: #2C3E50;
-    background-color: #2C3E50; }
+    border-color: white;
+    background-color: white; }
   .btn-primary .badge {
-    color: #2C3E50;
+    color: white;
     background-color: white; }
 
 .btn-success {
   font-weight: 700;
   color: white;
-  border-color: #18BC9C;
-  background-color: #18BC9C; }
+  border-color: #c84728;
+  background-color: #c84728; }
   .btn-success.focus, .btn-success:focus {
     color: white;
-    border-color: #0a4b3e;
-    background-color: #128f76; }
+    border-color: #5e2113;
+    background-color: #9e3820; }
   .btn-success:hover {
     color: white;
-    border-color: #11866f;
-    background-color: #128f76; }
+    border-color: #95351e;
+    background-color: #9e3820; }
   .btn-success.active, .btn-success:active,
   .open > .btn-success.dropdown-toggle {
     color: white;
-    border-color: #11866f;
-    background-color: #128f76; }
+    border-color: #95351e;
+    background-color: #9e3820; }
     .btn-success.active.focus, .btn-success.active:focus, .btn-success.active:hover, .btn-success:active.focus, .btn-success:active:focus, .btn-success:active:hover,
     .open > .btn-success.dropdown-toggle.focus,
     .open > .btn-success.dropdown-toggle:focus,
     .open > .btn-success.dropdown-toggle:hover {
       color: white;
-      border-color: #0a4b3e;
-      background-color: #0e6f5c; }
+      border-color: #5e2113;
+      background-color: #802d1a; }
   .btn-success.active, .btn-success:active,
   .open > .btn-success.dropdown-toggle {
     background-image: none; }
@@ -428,10 +449,10 @@ footer {
   fieldset[disabled] .btn-success.focus,
   fieldset[disabled] .btn-success:focus,
   fieldset[disabled] .btn-success:hover {
-    border-color: #18BC9C;
-    background-color: #18BC9C; }
+    border-color: #c84728;
+    background-color: #c84728; }
   .btn-success .badge {
-    color: #18BC9C;
+    color: #c84728;
     background-color: white; }
 
 .btn-social {
