--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -1,44 +1,60 @@
 // Styling for the masthead
 header.masthead {
-  padding-top: 100px;
-  padding-bottom: 50px;
-
-  text-align: center;
-
-  color: white;
-  background: $theme-success;
-  img {
-    display: block;
-
-    margin: 0 auto 20px;
-  }
-  .intro-text {
-    .name {
-      font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-      font-size: 2em;
-      font-weight: 700;
-
-      display: block;
-
-      text-transform: uppercase;
+    .intro-navigation {
+        font-size: 1.2em;
+        margin-top: 40px;
+        a {
+            text-decoration: none;
+            border: 1px solid $theme-primary;
+            padding: 10px;
+            color: $theme-primary;
+            &:hover {
+                color: $theme-primary;
+                background: rgba(0,0,0,0.5);
+            }
+            &:active {
+                color: $theme-primary;
+            }
+        }
     }
-    .skills {
-      font-size: 1.25em;
-      font-weight: 300;
+
+    height: 80%;
+
+    text-align: center;
+
+    color: white;
+    background: $theme-success;
+    background-image: url(../img/craft.jpg);
+    background-position: center;
+    background-size: cover;
+    img {
+        display: block;
+        margin: 0 auto 20px;
     }
-  }
-}
-@media(min-width:768px) {
-  header.masthead {
-    padding-top: 200px;
-    padding-bottom: 100px;
     .intro-text {
-      .name {
-        font-size: 4.75em;
-      }
-      .skills {
-        font-size: 1.75em;
-      }
+        .name {
+            font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+            font-size: 2em;
+            font-weight: 700;
+            display: block;
+        }
+        .skills {
+            font-size: 1.25em;
+            font-weight: 300;
+        }
     }
-  }
+}
+
+@media(min-width:768px) {
+    header.masthead {
+        padding-top: 18%;
+        .intro-text {
+            .name {
+                font-size: 4em;
+            }
+            .skills {
+                font-size: 1.5em;
+            }
+        }
+    }
 }
