--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -1,35 +1,36 @@
 // Styling for the navbar
 #mainNav {
-  font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 700;
   text-transform: uppercase;
-  border: none;
+  border-bottom: 2px solid $theme-secondary;
   background: $theme-primary;
   a:focus {
     outline: none;
   }
   .navbar-brand {
     font-size: 1.1rem;
-    color: white;
+    color: black;
     &.active,
     &:active,
     &:focus,
     &:hover {
-      color: white;
+      color: black;
     }
   }
   .navbar-nav {
+    font-size: 10pt;
     letter-spacing: 1px;
     li.nav-item {
       a.nav-link {
-        color: white;
+        color: black;
         &:hover {
           color: $theme-success;
           outline: none;
         }
         &:active,
         &:focus {
-          color: white;
+          color: black;
         }
       }
     }
@@ -38,11 +39,11 @@
     font-size: 14px;
     padding: 11px;
     text-transform: uppercase;
-    color: white;
-    border-color: white;
+    color: black;
+    border-color: black;
     &:focus,
     &:hover {
-      color: white;
+      color: black;
       border-color: $theme-success;
       background-color: $theme-success;
     }
@@ -52,6 +53,8 @@
   #mainNav {
     padding-top: 25px;
     padding-bottom: 25px;
+    padding-left: 200px;
+    padding-right: 200px;
     -webkit-transition: padding-top 0.3s, padding-bottom 0.3s;
     -moz-transition: padding-top 0.3s, padding-bottom 0.3s;
     transition: padding-top 0.3s, padding-bottom 0.3s;
@@ -63,7 +66,7 @@
     }
     .navbar-nav > li.nav-item > a.nav-link.active {
       color: white;
-      border-radius: 3px;
+      border-radius: 0px;
       background: $theme-success;
       &:active,
       &:focus,
@@ -74,8 +77,8 @@
     }
   }
   #mainNav.navbar-shrink {
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     .navbar-brand {
       font-size: 1.5em;
     }
