add latest insights section

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -4,7 +4,8 @@
 
 $theme-primary: white;
 $theme-secondary: #eab575;
-$theme-success: #c84728;
+$theme-success: #ea5045;
+$theme-third: #511b1b;
 
 $gray-base: #000;
 $gray-darker: lighten($gray-base, 13.5%);
