--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -23,7 +23,7 @@ a.active,
 a:active,
 a:focus,
 a:hover {
-  color: #c84728;
+  color: #ea5045;
   outline: none; }
 
 h1,
@@ -60,7 +60,7 @@ hr.star-light {
 
 hr.star-light:after {
   color: white;
-  background-color: #c84728; }
+  background-color: #ea5045; }
 
 hr.star-primary {
   border-color: white; }
@@ -73,14 +73,15 @@ hr.star-primary:after {
   margin: 0 auto; }
 
 section {
-  padding: 60px 0; }
+  padding: 60px 0 0 0; }
   section h2 {
     font-size: 2em;
-    margin: 0; }
+    margin: 0;
+    margin-bottom: 20pt; }
 
 section.success {
   color: white;
-  background: #c84728; }
+  background: #ea5045; }
 
 @media (max-width: 767px) {
   section {
@@ -122,7 +123,7 @@ section.success {
     font-size: 10pt;
     letter-spacing: 1px; }
     #mainNav .navbar-nav li.nav-item a.nav-link:hover {
-      color: #c84728;
+      color: #ea5045;
       outline: none; }
   #mainNav .navbar-toggler {
     font-size: 14px;
@@ -132,8 +133,8 @@ section.success {
     border-color: black; }
     #mainNav .navbar-toggler:focus, #mainNav .navbar-toggler:hover {
       color: black;
-      border-color: #c84728;
-      background-color: #c84728; }
+      border-color: #ea5045;
+      background-color: #ea5045; }
 
 @media (min-width: 992px) {
   #mainNav {
@@ -152,10 +153,10 @@ section.success {
     #mainNav .navbar-nav > li.nav-item > a.nav-link.active {
       color: white;
       border-radius: 0px;
-      background: #c84728; }
+      background: #ea5045; }
       #mainNav .navbar-nav > li.nav-item > a.nav-link.active:active, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:focus, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:hover {
         color: white;
-        background: #c84728; }
+        background: #ea5045; }
   #mainNav.navbar-shrink {
     padding-top: 5px;
     padding-bottom: 5px; }
@@ -166,7 +167,7 @@ header.masthead {
   height: 80%;
   text-align: center;
   color: white;
-  background: #c84728;
+  background: #ea5045;
   background-image: url(../img/craft.jpg);
   background-position: center;
   background-size: cover; }
@@ -220,7 +221,7 @@ header.masthead {
       -moz-transition: all ease 0.5s;
       transition: all ease 0.5s;
       opacity: 0;
-      background: rgba(200, 71, 40, 0.9); }
+      background: rgba(234, 80, 69, 0.9); }
       #portfolio .portfolio-item .portfolio-link .caption:hover {
         opacity: 1; }
       #portfolio .portfolio-item .portfolio-link .caption .caption-content {
@@ -345,7 +346,7 @@ header.masthead {
   opacity: 1; }
 
 .floating-label-form-group-with-focus label {
-  color: #c84728; }
+  color: #ea5045; }
 
 form .row:first-child .floating-label-form-group {
   border-top: 1px solid #eeeeee; }
@@ -363,6 +364,43 @@ footer {
     padding: 25px 0;
     background-color: white; }
 
+a.continue-to-insight {
+  padding: 5px;
+  display: block;
+  border: 1px solid #ea5045; }
+
+.insight h1 {
+  color: white;
+  font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 1.2em;
+  font-weight: 700;
+  display: block;
+  background: #ea5045;
+  border-bottom: 1px solid #511b1b;
+  padding: 8px; }
+
+.insight p {
+  margin-top: 5pt;
+  font-size: 1em;
+  text-align: justify;
+  color: rgba(0, 0, 0, 0.8); }
+
+.insight .banner {
+  background: #ea5045;
+  background-position: center;
+  background-size: cover;
+  height: 140px;
+  opacity: 0.9; }
+
+.insight .radar {
+  background-image: url(../img/insights/radar.jpg); }
+
+.insight .courses {
+  background-image: url(../img/insights/courses.jpg); }
+
+.insight .conferences {
+  background-image: url(../img/insights/conferences.jpg); }
+
 .btn-outline {
   font-size: 20px;
   margin-top: 15px;
@@ -371,7 +409,7 @@ footer {
   border: solid 2px white;
   background: transparent; }
   .btn-outline.active, .btn-outline:active, .btn-outline:focus, .btn-outline:hover {
-    color: #c84728;
+    color: #ea5045;
     border: solid 2px white;
     background: white; }
 
@@ -416,28 +454,28 @@ footer {
 .btn-success {
   font-weight: 700;
   color: white;
-  border-color: #c84728;
-  background-color: #c84728; }
+  border-color: #ea5045;
+  background-color: #ea5045; }
   .btn-success.focus, .btn-success:focus {
     color: white;
-    border-color: #5e2113;
-    background-color: #9e3820; }
+    border-color: #9e1b12;
+    background-color: #e2271a; }
   .btn-success:hover {
     color: white;
-    border-color: #95351e;
-    background-color: #9e3820; }
+    border-color: #d92519;
+    background-color: #e2271a; }
   .btn-success.active, .btn-success:active,
   .open > .btn-success.dropdown-toggle {
     color: white;
-    border-color: #95351e;
-    background-color: #9e3820; }
+    border-color: #d92519;
+    background-color: #e2271a; }
     .btn-success.active.focus, .btn-success.active:focus, .btn-success.active:hover, .btn-success:active.focus, .btn-success:active:focus, .btn-success:active:hover,
     .open > .btn-success.dropdown-toggle.focus,
     .open > .btn-success.dropdown-toggle:focus,
     .open > .btn-success.dropdown-toggle:hover {
       color: white;
-      border-color: #5e2113;
-      background-color: #802d1a; }
+      border-color: #9e1b12;
+      background-color: #c22116; }
   .btn-success.active, .btn-success:active,
   .open > .btn-success.dropdown-toggle {
     background-image: none; }
@@ -445,10 +483,10 @@ footer {
   fieldset[disabled] .btn-success.focus,
   fieldset[disabled] .btn-success:focus,
   fieldset[disabled] .btn-success:hover {
-    border-color: #c84728;
-    background-color: #c84728; }
+    border-color: #ea5045;
+    background-color: #ea5045; }
   .btn-success .badge {
-    color: #c84728;
+    color: #ea5045;
     background-color: white; }
 
 .btn-social {
