--- a/scss/freelancer.scss
+++ b/scss/freelancer.scss
@@ -5,4 +5,5 @@
 @import "masthead.scss";
 @import "portfolio.scss";
 @import "contact.scss";
+@import "insights.scss";
 @import "bootstrap-overrides.scss";
